--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "bcrypt": "*",
+    "bcrypt": "^1.0.3",
     "knox": "^0.9.2",
     "meteor-node-stubs": "~0.2.0",
     "moment": "2.15.1",
