--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0",
+    "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
     "knox": "^0.9.2",
+    "materialize-css": "^1.0.0",
     "meteor-node-stubs": "~0.2.0",
-    "moment": "2.15.1",
-    "quill": "^1.1.5",
+    "mime": "^1.6.0",
+    "moment": "^2.15.1",
+    "quill": "^1.3.7",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-fontawesome": "^1.3.1",
+    "react-fontawesome": "^1.7.1",
     "react-mounter": "^1.2.0",
     "react-router": "^2.8.1",
     "request": "^2.76.0",
@@ -25,6 +27,5 @@
   "main": "index.js",
   "author": "Jonas Barsten",
   "license": "ISC",
-  "description": "artex.no",
-  "devDependencies": {}
+  "description": "artex.no"
 }
