--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "babel-runtime": "^6.18.0",
     "bcrypt": "^1.0.3",
     "knox": "^0.9.2",
+    "materialize-css": "^1.0.0-rc.2",
     "meteor-node-stubs": "~0.2.0",
     "moment": "2.15.1",
     "quill": "^1.1.5",
-    "react": "^15.3.2",
+    "react": "^15.7.0",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.7.0",
     "react-fontawesome": "^1.3.1",
     "react-mounter": "^1.2.0",
     "react-router": "^2.8.1",
